--- a/react-native/VideoProcessApp/package.json
+++ b/react-native/VideoProcessApp/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@eyepop.ai/eyepop": "^1.13.2",
+    "@azure/core-asynciterator-polyfill": "^1.0.2",
+    "@eyepop.ai/eyepop": "^1.14.1",
     "axios": "^1.8.2",
     "path-browserify": "^1.0.1",
     "react": "19.0.0",
@@ -19,7 +20,10 @@
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-permissions": "^5.2.6",
-    "stream-browserify": "^3.0.0"
+    "react-native-tcp-socket": "^6.2.0",
+    "stream-browserify": "^3.0.0",
+    "pino": "^8.17.2",
+    "web-streams-polyfill": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,6 +41,7 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
