--- a/react-native/VideoProcessApp/package.json
+++ b/react-native/VideoProcessApp/package.json
@@ -11,19 +11,13 @@
   },
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
-    "@eyepop.ai/eyepop": "^1.14.1",
-    "axios": "^1.8.2",
-    "path-browserify": "^1.0.1",
+    "@eyepop.ai/eyepop": "^1.14.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.0",
-    "react-native-permissions": "^5.2.6",
-    "react-native-tcp-socket": "^6.2.0",
-    "stream-browserify": "^3.0.0",
-    "pino": "^8.17.2",
-    "web-streams-polyfill": "^3.3.3"
+    "web-streams-polyfill": "3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -41,7 +35,6 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
