--- a/react-native/VideoProcessApp/package.json
+++ b/react-native/VideoProcessApp/package.json
@@ -11,13 +11,22 @@
   },
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
-    "@eyepop.ai/eyepop": "1.14.3",
-    "react": "19.0.0",
-    "react-native": "0.78.0",
+    "@eyepop.ai/eyepop": "file:../../../eyepop-sdk-node/eyepop.ai-eyepop-1.15.0.tgz",
+    "@eyepop.ai/eyepop-render-2d": "file:../../../eyepop-sdk-node/eyepop.ai-eyepop-render-2d-1.15.0.tgz",
+    "@eyepop.ai/react-native-eyepop": "file:../../../eyepop-sdk-node/eyepop.ai-react-native-eyepop-1.15.0.tgz",
+    "axios": "^1.8.2",
+    "path-browserify": "^1.0.1",
+    "pino": "^8.17.2",
+    "react": "^18.3.1",
+    "react-native": "^0.76.7",
     "react-native-dotenv": "^3.4.11",
-    "react-native-file-access": "3.1.1",
+    "react-native-file-access": "^3.1.1",
     "react-native-image-picker": "^8.2.0",
-    "web-streams-polyfill": "3.3.3"
+    "react-native-permissions": "^5.2.6",
+    "react-native-tcp-socket": "^6.2.0",
+    "react-native-webrtc": "^124.0.5",
+    "stream-browserify": "^3.0.0",
+    "web-streams-polyfill": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -26,17 +35,17 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.78.0",
-    "@react-native/eslint-config": "0.78.0",
-    "@react-native/metro-config": "0.78.0",
-    "@react-native/typescript-config": "0.78.0",
+    "@react-native/babel-preset": "^0.76.7",
+    "@react-native/eslint-config": "^0.76.7",
+    "@react-native/metro-config": "^0.76.7",
+    "@react-native/typescript-config": "^0.76.7",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "^18.3.12",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.76.9",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
