--- a/node/Data Ingest/package.json
+++ b/node/Data Ingest/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@eyepop.ai/eyepop": "^1.17.3",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "image-size": "^2.0.2"
   },
@@ -11,6 +12,7 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "start": "node --loader ts-node/esm main.ts"
+    "start": "node --loader ts-node/esm main.ts",
+    "hvackr": "node --loader ts-node/esm hvackr.ts"
   }
 }
