--- a/node/Data Ingest/package.json
+++ b/node/Data Ingest/package.json
@@ -4,7 +4,8 @@
     "@eyepop.ai/eyepop": "^1.17.3",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "image-size": "^2.0.2"
+    "image-size": "^2.0.2",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@types/node": "^22.15.20",
