--- a/node/Data Ingest/package.json
+++ b/node/Data Ingest/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "node --loader ts-node/esm main.ts",
-    "hvackr": "node --loader ts-node/esm hvackr.ts"
+    "hvackr": "node --loader ts-node/esm hvackr.ts",
+    "compare": "node --loader ts-node/esm compareassets.ts"
   }
 }
