explicit transient pop_id in example

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ python/SortImagesByObject/output/*
 python/SortImagesByObject/input/*
 python/Detecting Blurry or Noisy Images/inputs/*
 python/Detecting Blurry or Noisy Images/models/*
+node/Data Ingest/input/*
