--- a/react/ask-questions-in-an-image/package.json
+++ b/react/ask-questions-in-an-image/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@eyepop.ai/eyepop": "^2.0.0",
+    "@eyepop.ai/eyepop-render-2d": "^2.0.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
